	on the login page, default.aspx, saying:

	Continue as "guest" without logging in

	You can control the per-project permissions of the guest user in the
	same way as other users EXCEPT that even if you give the guest user
	permissions beyond View Only and Reporter, the system will
	automatically reduce his permissions downward.

* Modified search of comments to also search email bodies.

* Added another query sample to setup.sql.  This one shows the bugs
that have been stuck the longest time without a status change.

select case 
 when datediff(d, isnull(bp_date,bg_reported_date), getdate()) > 90 
 	then '#ff9999' 
 when datediff(d, isnull(bp_date,bg_reported_date), getdate()) > 30 
 	then '#ffcccc' 
 when datediff(d, isnull(bp_date,bg_reported_date), getdate()) > 7 
 	then '#ffdddd'  
 else '#ffffff' end, 
 bg_id [id], bg_short_desc [desc], 
 datediff(d, isnull(bp_date,bg_reported_date), getdate()) [days in status],
 st_name [status], 
 isnull(bp_comment,'') [last status change], 
 isnull(bp_date,bg_reported_date) [status date]
 from bugs
 inner join statuses on bg_status = st_id
 left outer join bug_posts on bg_id = bp_bug
 and bp_type = 'update' 
 and bp_comment like 'changed status from%' 
 and bp_date in (select max(bp_date) from bug_posts where bp_bug = bg_id)
 WhErE 1 = 1 
 order by 4 desc 

* In queries.aspx, now preserving the line breaks in the SQL, for easier
reading.

* Cosmetic changes to edit_bug.aspx, which I hope folks will like.

-----------------------------------------------------------------------
Version 2.7.6  2/8/2008
-----------------------------------------------------------------------

* Fixed bug: when user has only view or reporter permission, the bug's
short description was hidden on the edit_bug.aspx page.

* Changed the implementation of filters dropdowns in the bug lists so 
that usually, they only show choices that are actually present in the 
bug list.  Before this change, if you had external users looking at