@@ -402,7 +402,7 @@ string get_bug_text(int bugid)
 		// write the html to that response
 		System.IO.StringWriter writer = new System.IO.StringWriter();
 		HttpResponse my_response = new HttpResponse(writer);
-		PrintBug.print_bug(my_response, bug_dr, security.user.is_admin, security.user.external_user);
+		PrintBug.print_bug(my_response, bug_dr, security.user.is_admin, security.user.external_user, true /*include style*/);
 		return writer.ToString();
 }
 
